# pacxx-llvm

./: .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yaml  .travis.yml  README.md
include/llvm/: InitializePasses.h  LinkAllPasses.h
include/llvm/IR/: Intrinsics.td  IntrinsicsPACXX.td
include/llvm/Transforms/: PACXXTransforms.h
include/rv/: vectorizationInfo.h
include/rv/analysis/: DFG.h
include/rv/transform/: irPolisher.h
include/wfv/: wfvConfig.h  wfvInfo.h  wfvInterface.h  wfvRegionBased.h
include/wfv/analysis/: PathFinder.h  SketchGraph.h  analysisCfg.h  linearizationVerifier.h  loopLiveValueAnalysis.h  maskAnalysis.h  sccAnalyzer.h  vectorizationAnalysis.h  vectorizationPrereqVerifier.h  vectorizationVerifier.h
include/wfv/functionPasses/: cfgLinearizer.h  dummy.h  functionVectorizer.h  loopExitCanonicalizer.h  maskGenerator.h  selectGenerator.h
include/wfv/utils/: functionInfoMap.h  maskGraphUtils.h  metadata.h  valueInfoMap.h  wfvTools.h
include/wfv/variantRegions/: disableVectorizationRegion.h  sequentializeRegion.h  utils.h  variantRegion.h  variantRegionFactory.h
lib/: CMakeLists.txt  LLVMBuild.txt
lib/Analysis/: ScalarEvolutionExpander.cpp
lib/CodeGen/SelectionDAG/: DAGCombiner.cpp
lib/Rv/: CMakeLists.txt  LLVMBuild.txt  PlatformInfo.cpp  registerPasses.cpp  sleefLibrary.cpp  vectorMapping.cpp  vectorizationInfo.cpp
lib/Rv/analysis/: DFG.cpp  VectorizationAnalysis.cpp  maskAnalysis.cpp
lib/Rv/native/: NatBuilder.cpp  NatBuilder.h
lib/Rv/transform/: Linearizer.cpp  irPolisher.cpp  maskExpander.cpp  structOpt.cpp
lib/Rv/transform/cns/: CommonTypes.h
lib/Rv/utils/: rvTools.cpp
lib/Transforms/: CMakeLists.txt
lib/Transforms/PACXX/: CMakeLists.txt  CallVisitor.h  Common.cpp  Common.h  FunctionCloner.h  IdHelper.h  LLVMBuild.txt  Log.cpp  Log.h  ModuleHelper.h  SPMDVectorizer.cpp  barrier.back  gep_fixer.cpp  nvvm.cpp  nvvm_reg.cpp  pacxx_addrspace_transform.cpp  pacxx_classify.cpp  pacxx_dce.cpp  spir.cpp  (+18 more)
lib/Wfv/: CMakeLists.txt  COPYING  LLVMBuild.txt  wfvInfo.cpp  wfvInterface.cpp  wfvRegionBased.cpp
tools/bugpoint/: CMakeLists.txt
tools/llvm-nm/: llvm-nm.cpp
tools/opt/: CMakeLists.txt
(+38 files in other folders)
